--- a/Homework/app/build.gradle
+++ b/Homework/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 
     // lottie Android 官网：https://airbnb.io/lottie/#/android
     implementation 'com.airbnb.android:lottie:2.7.0'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     // 这里添加了一个外部库，用来选择颜色
